--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -37,7 +37,7 @@ $breakpoints: (
     display: flex;
     position: absolute;
     flex-direction: column;
-    z-index: 1;
+    z-index: 5;
     width: 100vw;
     height: auto;
     left: 0;
